[metadata]
name = winbackup
version = attr: winbackup.__version__
author = Joe Campbell
description = Backup user files on windows to 7z archives
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Operating System :: Windows
        Natural Language :: English
        Topic :: Utilities

[options]
packages = winbackup
python_requires = >=3.6
install_requires = 
        tqdm>4
        colorama>0.4
        Send2Trash>1.5
        humanize>4

[options.package_data]
winbackup = scripts/*, bin/7z/*

[options.entry_points]
console_scripts = 
    passwd_to_digits = winbackup.__main__:cli

