[metadata]
name = winbackup
version = attr: winbackup.__version__
author = Joe Campbell
description = Backup user files on windows to 7z archives
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/needs-coffee/winbackup
license = GPLv3
keywords = windows backup virtualbox plex backup-script hyper-v backup-tool 7zip
classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Development Status :: 4 - Beta
        Operating System :: Microsoft :: Windows
        Natural Language :: English
        Topic :: Utilities
project_urls = 
    Bug Tracker = https://github.com/needs-coffee/winbackup/issues

[options]
packages = winbackup
python_requires = >=3.7
install_requires = 
        tqdm>4
        colorama>0.4
        Send2Trash>1.5
        humanize>4
        PyYAML>5

[options.package_data]
winbackup = scripts/*, bin/7z/*

[options.entry_points]
console_scripts = 
    winbackup = winbackup.__main__:cli

